﻿EQExtractor2 Changelog. All changes since the 1.0 release.

==08/29/2010==
Derision: Added handling of unencapsulated application packets with flags which were previously being interpreted as unknown opcodes.
		  (Seems to only have affects position update packets).

Derision: Construct grids from both OP_NPCMoveUpdate and OP_MobUpdate packets. Previously, if OP_NPCMoveUpdate packets were sent for a mob,
		  i.e. high-resolution updates, any OP_MobUpdate packets for that mob where ignored.

Derision: Added facility in Options to specify a file to write low level netcode debug information to.
Derision: Decoded Crypto flag from OP_SessionRequest to identify and ignore compressed UCS stream.
Derision: Added error checking when opening netcode debug file.

==08/27/2010==
Derision: Redesigned the UI. Use the menu bar, or the following shortcuts:

			Ctrl-L	Load .PCAP file
			Ctrl-S	Generate SQL
			Ctrl-P	Dump Packets
			Ctrl-V	View Packets
			Ctrl-A	Dump AA
			Ctrl-D	Show Debug Window (hidden by default. Change in Options).
			Ctrl-O	Set Options (these settings persist across sessions).			

Derision: Added the ability to disable removal of redundant waypoints.
Derision: Added an option to only generate SQL for spawns whose name contains a given string.
Derision: Added optional timestamps to packet dump. Added capture date to SQL output.
Derision: Fixed crash when Debug log was closed rather than just hidden.

==07/16/2010==
Derision: Replaced HexDump method with a considerably faster version.

==07/14/2010==
Derision: Renamed PatchTestJune242010Decoder to PatchJuly132010Decoder. 
Derision: Updated patch_May12-2010.conf with current EQEmu patch_Live.conf. Updated version number to 2.0.5

==06/26/2010==
Derision: Removed the need to duplicate certain methods when deriving a new decoder.
Derision: Moved patch specific variable setting (PPLength, Name etc.) into the decoder constructor

==06/25/2010==