@@ -85,6 +85,7 @@
     <Compile Include="PatchMay12-2010.cs" />
     <Compile Include="PatchSoD.cs" />
     <Compile Include="PatchJuly13-2010.cs" />
+    <Compile Include="PatchTestSep1-2010.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserOptions.cs">
@@ -117,6 +118,9 @@
       <DependentUpon>UserOptions.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="patch_Sep01-2010.conf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="patch_May12-2010.conf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
