@@ -1,0 +1,14 @@
+OP_ZoneEntry=0x538f
+OP_PlayerProfile=0x6022
+OP_SpawnDoor=0x47ae
+OP_GroundSpawn=0x5f0d
+OP_ShopRequest=0x1044
+OP_ShopEnd=0x3753
+OP_ItemPacket=0x032b
+OP_SendZonePoints=0x0ff4
+OP_NewZone=0x0254
+OP_NPCMoveUpdate=0x7adb
+OP_MobUpdate=0x4656
+OP_ClientUpdate=0x7062
+OP_SendFindableNPCs=0x162d
+OP_SendAATable=0x6dc3
